- The take off shoes skill can now be used to tempt anyone that has a footfetish
- Buffed insertion damage for fuck skills (the insertion trait did not change)
- Assjob base damage buffed from 4-7 to 10-14
	- This is increased by 3 if your bottom is naked and by 3 again if the opponent's crotch is open.

New:
- Completely reworked mojo. You now do not gain mojo per fight or level.
	- Instead everyone starts with a set amount of maximum mojo that they will use for the rest of the game, barring certain traits.
- Completely reworked how pets are handled. There are so many changes that it's hard to list everything here.
	- The core change is that pets are treated like characters and can use skills on either the master or the opponent.
	- Leadership now increases the level of pets summoned by 5.
	- Pets now disappear if they orgasm or get knocked out or stunned.
- Added some new summoning skills:
	- Summon Yui can call the ninja to help you out in a fight at the cost of 1 affection per summon. This is unlocked at 10 affection with Yui.
	- Simulacrum is a 12 divinity skill that creates a sex-changed copy of your opponent to fight for you temporarily.
	- Threesome is a fuck skill that makes your pet to fuck your opponent.
		- Added some new sex stances related to this:
			- FFM Cowgirl
			- FFM Cowgirl + Facesit
			- MFF Missionary with Assist
			- MFM Spitroast
			- MFM Double Penetration
- Changed how combat works. After each phase of combat, you advance the text by hitting next instead of all the text hitting you at once.
- Changed how leveldowns work. Each level up is saved now, so that when you level down you get to exactly where you were before instead of randomly losing traits or attributes.
- Flycatcher can now be used with 9 Ki or 18 Cunning
	- Now instead of instantly downing the pet, it has a huge pain damage (30 - 50) targeted to a Pet
	- Now costs 25% of your maximum stamina to use
- New skill HoneyPot
	- can be used with 9 Dark or 18 Seduction