@@ -205,6 +205,9 @@ public abstract class Skill {
         skill.user().spendMojo(c, skill.getMojoCost(c));
         if (success) {
             skill.user().buildMojo(c, generated);
+        } else if (target.has(Trait.tease)) {
+            c.write(target, Global.format("Dancing just past {other:name-possessive} reach gives {self:name-do} a minor high.", target, skill.getSelf()));
+            target.buildMojo(c, 5);
         }
         if (c.getCombatantData(skill.getSelf()) != null) {
             c.getCombatantData(skill.getSelf()).decreaseMoveModifier(c, skill);
